examples/test/testpolicy10411.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10411
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key30: value8
      key49: value32
      key16: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value6
          key7: value14
      podSelector:
        matchLabels:
          key41: value21
          key17: value18
